--- a/templates/mysite/map_gen.html
+++ b/templates/mysite/map_gen.html
@@ -1,7 +1,7 @@
 {% extends "mysite/base.html" %}
 {% load staticfiles %}
 {% block head %}
-  <script src="{% static 'map/map.js' %}"></script>
+  <script src="{% static 'map/map_gen.js' %}"></script>
   <script src="http://ditu.google.cn/maps/api/js?key=AIzaSyCV2LhPPs_xQ5olb_gmqTq3oYPCXYgTMjQ" type="text/javascript"></script>
 {% endblock %}
 {% block content %}
