--- a/templates/mysite/base.html
+++ b/templates/mysite/base.html
@@ -35,7 +35,7 @@
 
         <nav class="navbar navbar-dark"> 
           <ul id ="nav_tab" class="nav nav-pills nav-header">
-            <li role="presentation" class="li6" ><a class="navlia" href="album/index">Home<br/>首页</a></li>
+            <li role="presentation" class="li6" ><a class="navlia" href="/album/index">Home<br/>首页</a></li>
             <li role="presentation" class="li6" ><a class="navlia" href="/introduction">About US<br/>关于我们</a></li>
             <li role="presentation" class="li6" ><a class="navlia" href="/activities">Event<br/>行事</a></li>
             <li role="presentation" class="li6" ><a class="navlia" href="/members">Admission<br/>入会案内</a></li>
