--- a/static/blog/css/style.css
+++ b/static/blog/css/style.css
@@ -142,10 +142,17 @@ blockquote img{
 
 blockquote, pre code {
   padding: 0 1em;
-  font-size: 13px;
+  font-size: 16px;
   line-height: 1.6;
   display: block;
   overflow: auto; 
+}
+
+blockqute, h3{
+  margin-top:0px;
+  text-align:center;
+  color:#ccc;
+  font-size:13px;
 }
 
 footer {
