--- a/static/blog/css/style.css
+++ b/static/blog/css/style.css
@@ -90,13 +90,18 @@ header nav ul{
 
 .li6{
   height:100%;
-  width:14.2857142857%;
+  width:12.5%;
 }
 
 .li12{
   height:100%;
-  width:7.14285714286%;
+  width:6.25%;
 }
+
+.dropdown-menu {
+  height:10px;
+}
+
 
 .navlia{
   height:100%;
@@ -127,13 +132,31 @@ header nav ul{
   line-height: 2em; 
 }
 
+.post{
+  overflow:auto;
+}
+
+.leftblog {
+  float:left;
+  width:50%;
+}
+.rightblog {
+  float:left;
+  width:50%;
+}
+.leftblog img{
+  max-width:300px;
+  margin: 0px;
+}
 
 blockquote {
-    border-left: 5px solid rgb(255, 255, 255);
+    border-left: 0px solid rgb(255, 255, 255);
 }
 
 blockquote img{
-  max-width:100%;
+  max-width:800px;
+  display:block;
+  margin: 0 auto;
 }
 
 .blog video{
