--- a/templates/mysite/base.html
+++ b/templates/mysite/base.html
@@ -37,7 +37,15 @@
           <ul id ="nav_tab" class="nav nav-pills nav-header">
             <li role="presentation" class="li6" ><a class="navlia" href="/album/index">Home<br/>首页</a></li>
             <li role="presentation" class="li6" ><a class="navlia" href="/introduction">About US<br/>关于我们</a></li>
-            <li role="presentation" class="li6" ><a class="navlia" href="/activities">Event<br/>行事</a></li>
+	    <li role="presentation" class="li6" ><a class="navlia" href="/culture">Culture<br/>传统</a></li>
+	    <li role="presentation" class="li6" class="dropdown">
+              <a class="navlia" class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                Kyudo<br/>弓道
+              </a>
+              <ul class="dropdown-menu nav-header">
+                <li role="presentation" ><a class="navlia" href="/activities">Event<br/>行事</a></li>
+              </ul>
+            </li>
             <li role="presentation" class="li6" ><a class="navlia" href="/members">Admission<br/>入会案内</a></li>
             <li role="presentation" class="li6" class="dropdown">
               <a class="navlia" class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
@@ -72,7 +80,15 @@
           <ul id ="nav_tab2" class="nav nav-pills">
             <li role="presentation"  ><a href="album/index">Home<br/>首页</a></li>
             <li role="presentation"  ><a href="/introduction">About US<br/>关于我们</a></li>
-            <li role="presentation"  ><a href="/activities">Event<br/>行事</a></li>
+	    <li role="presentation"  ><a href="/culture">Culture<br/>传统</a></li>
+	    <li role="presentation" class="li6" class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                Kyudo<br/>弓道
+              </a>
+              <ul class="dropdown-menu ">
+                <li role="presentation" ><a href="/activities">Event<br/>行事</a></li>
+              </ul>
+            </li>
             <li role="presentation"  ><a href="/members">Admission<br/>入会案内</a></li>
             <li role="presentation"  class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
