--- a/templates/file/upload.html
+++ b/templates/file/upload.html
@@ -26,7 +26,7 @@
     </div>
     <div class="form-group">
       <label for="file_file">文件:</label>
-      <input id="file_file" name="file" type="file"/>
+      <input id="file_file" name="files" type="file" multiple/>
     </div>
     <div class="form-group">
       <label for="blog_content">内容:</label>
