--- a/templates/mysite/base.html
+++ b/templates/mysite/base.html
@@ -35,7 +35,7 @@
 
         <nav class="navbar navbar-dark"> 
           <ul id ="nav_tab" class="nav nav-pills nav-header">
-            <li role="presentation" class="li6" ><a class="navlia" href="/album/index">Home<br/>首页</a></li>
+            <li role="presentation" class="li6" ><a class="navlia" href="/index">Home<br/>首页</a></li>
             <li role="presentation" class="li6" ><a class="navlia" href="/introduction">About US<br/>关于我们</a></li>
 	    <li role="presentation" class="li6" ><a class="navlia" href="/culture">Culture<br/>传统</a></li>
 	    <li role="presentation" class="li6" class="dropdown">
@@ -52,6 +52,7 @@
                 Share<br/>分享
               </a>
               <ul class="dropdown-menu nav-header">
+                <li role="presentation" ><a class="navlia" href="/blog_list">blog<br/>文章集</a></li>
                 <li role="presentation" ><a class="navlia" href="/album_list">album<br/>相册集</a></li>
                 <li role="presentation" ><a class="navlia" href="/video_list">video<br/>视频集</a></li>
                 <li role="presentation" ><a class="navlia" href="/map">Shop</br/>弓具店</a></li>
@@ -95,6 +96,7 @@
                 Share<br/>分享
               </a>
               <ul class="dropdown-menu">
+                <li role="presentation" ><a href="/blog_list">blog<br/>文章集</a></li>
                 <li role="presentation" ><a href="/album_list">album<br/>相册集</a></li>
                 <li role="presentation" ><a href="/video_list">video<br/>视频集</a></li>
                 <li role="presentation" ><a href="/map">Shop</br/>弓具店</a></li>
