--- a/templates/mysite/base.html
+++ b/templates/mysite/base.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us" >
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    
+<meta name="description" content="We are a kyudo organization located in Shanghai, China.上海正鹄会是社团形式的弓道组织。我们致力于弘扬礼仪文化，推广弓道运动。欢迎各位弓友来相互交流。">   
     <title>{{site.title}}</title>
     <link rel="shortcut icon" href="{% static 'icon.png' %}"/>
     <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}">
