--- a/templates/mysite/base.html
+++ b/templates/mysite/base.html
@@ -52,6 +52,7 @@
                 Share<br/>分享
               </a>
               <ul class="dropdown-menu nav-header">
+                <li role="presentation" ><a class="navlia" href="/news_list">news<br/>新闻集</a></li>
                 <li role="presentation" ><a class="navlia" href="/blog_list">blog<br/>文章集</a></li>
                 <li role="presentation" ><a class="navlia" href="/album_list">album<br/>相册集</a></li>
                 <li role="presentation" ><a class="navlia" href="/video_list">video<br/>视频集</a></li>
@@ -96,6 +97,7 @@
                 Share<br/>分享
               </a>
               <ul class="dropdown-menu">
+                <li role="presentation" ><a href="/news_list">news<br/>新闻集</a></li>
                 <li role="presentation" ><a href="/blog_list">blog<br/>文章集</a></li>
                 <li role="presentation" ><a href="/album_list">album<br/>相册集</a></li>
                 <li role="presentation" ><a href="/video_list">video<br/>视频集</a></li>
