--- a/templates/mysite/base.html
+++ b/templates/mysite/base.html
@@ -3,11 +3,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us" >
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="description" content="We are a kyudo organization located in Shanghai, China.上海正鹄会是社团形式的弓道组织。我们致力于弘扬礼仪文化，推广弓道运动。欢迎各位弓友来相互交流。">   
+    <meta name="keywords" content="弓道"/>
+    <meta name="keywords" content="和弓"/>
+    <meta name="keywords" content="上海"/>
+    <meta name="keywords" content="正鹄会"/>
+    <meta name="keywords" content="kyudo"/>
+    <meta name="description" content="上海正鹄会是社团形式的弓道组织。我们致力于弘扬礼仪文化，推广弓道运动。欢迎各位弓友前来交流。"/>   
     <title>{{site.title}}</title>
     <link rel="shortcut icon" href="{% static 'icon.png' %}"/>
-    <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'bootstrap/bootstrap-theme.min.css' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'bootstrap/bootstrap-theme.min.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'blog/css/style.css' %}" />
     
     <script src="{% static 'jquery/jquery-1.11.3.min.js' %}"></script>
