--- a/templates/mysite/base.html
+++ b/templates/mysite/base.html
@@ -36,9 +36,17 @@
         <nav class="navbar navbar-dark"> 
           <ul id ="nav_tab" class="nav nav-pills nav-header">
             <li role="presentation" class="li6" ><a class="navlia" href="/index">Home<br/>首页</a></li>
-            <li role="presentation" class="li6" ><a class="navlia" href="/introduction">About US<br/>关于我们</a></li>
-	    <li role="presentation" class="li6" ><a class="navlia" href="/culture">Culture<br/>传统</a></li>
-	    <li role="presentation" class="li6" class="dropdown">
+            <li role="presentation" class="li6" class="dropdown">
+              <a class="navlia" class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                About US<br/>关于我们
+              </a>
+              <ul class="dropdown-menu nav-header">
+                <li role="presentation" ><a class="navlia" href="/introduction">introduction<br/>介绍</a></li>
+                <li role="presentation" ><a class="navlia" href="/mail">Email<br/>联系我们</a></li>
+              </ul>
+            </li>
+      	    <li role="presentation" class="li6" ><a class="navlia" href="/culture">Culture<br/>传统</a></li>
+      	    <li role="presentation" class="li6" class="dropdown">
               <a class="navlia" class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                 Kyudo<br/>弓道
               </a>
@@ -81,7 +89,15 @@
             <nav class="navbar navbar-dark"> 
           <ul id ="nav_tab2" class="nav nav-pills">
             <li role="presentation"  ><a href="album/index">Home<br/>首页</a></li>
-            <li role="presentation"  ><a href="/introduction">About US<br/>关于我们</a></li>
+            <li role="presentation" class="li6" class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                About US<br/>关于我们
+              </a>
+              <ul class="dropdown-menu nav-header">
+                <li role="presentation" ><a href="/introduction">introduction<br/>介绍</a></li>
+                <li role="presentation" ><a href="/mail">Email<br/>联系我们</a></li>
+              </ul>
+            </li>
 	    <li role="presentation"  ><a href="/culture">Culture<br/>传统</a></li>
 	    <li role="presentation" class="li6" class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
