--- a/templates/authority/login.html
+++ b/templates/authority/login.html
@@ -3,11 +3,11 @@
   <form action="" method="post">{% csrf_token %}
     <div class="form-group">
       <label for="userId">User Id:</label>
-      <input id="userId" name="name" type="text" class="form-control" placeholder="User Id" aria-describedby="basic-addon1">
+      <input id="userId" name="name" type="text" class="form-control" placeholder="User Id" aria-describedby="basic-addon1"/>
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
-      <input id="password" name="password" type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
+      <input id="password" name="password" type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1"/>
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
