--- a/templates/mysite/base.html
+++ b/templates/mysite/base.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="上海"/>
     <meta name="keywords" content="正鹄会"/>
     <meta name="keywords" content="kyudo"/>
+    <meta name="keywords" content="shanghai"/>
     <meta name="description" content="上海正鹄会是社团形式的弓道组织。我们致力于弘扬礼仪文化，推广弓道运动。欢迎各位弓友前来交流。"/>   
     <title>{{site.title}}</title>
     <link rel="shortcut icon" href="{% static 'icon.png' %}"/>
@@ -29,10 +30,10 @@
         <div class="logo_dialog">
     <div class="list_carousel responsive" style = "height:100%;width:100%;">
       <ul id="header_album">
-       <img src="/static/photo_01.png"  />
-       <img src="/static/photo_02.png"  />
-       <img src="/static/photo_03.png"  />
-       <img src="/static/photo_04.png"  />
+       <img src="http://owgdgxfqs.bkt.clouddn.com/photo_01.png?attname=&e=1505703638&token=Mwm9f_4JvNJZfeCpGK3STTF1zUTZbsXonDHIq_8j:Dcg2f6JiXqMTrd9E6XZCDBwlA2I"  />
+       <img src="http://owgdgxfqs.bkt.clouddn.com/photo_02.png?attname=&e=1505703638&token=Mwm9f_4JvNJZfeCpGK3STTF1zUTZbsXonDHIq_8j:M93eaeWgx2WHoTU_sFCGmsMfbd8"  />
+       <img src="http://owgdgxfqs.bkt.clouddn.com/photo_03.png?attname=&e=1505703638&token=Mwm9f_4JvNJZfeCpGK3STTF1zUTZbsXonDHIq_8j:Pky_0UuBN-ovw7NeeANF3eDwwto"  />
+       <img src="http://owgdgxfqs.bkt.clouddn.com/photo_04.png?attname=&e=1505703638&token=Mwm9f_4JvNJZfeCpGK3STTF1zUTZbsXonDHIq_8j:uDA7C8qXehTH1qv6k5J2SUTY7B8"  />
       </ul>
     </div>
             <a  title='{{site.title}}' class="logo" href="{{site.index}}"></a>
