update for new django

--- a/templates/mysite/base.html
+++ b/templates/mysite/base.html
@@ -30,10 +30,10 @@
         <div class="logo_dialog">
     <div class="list_carousel responsive" style = "height:100%;width:100%;">
       <ul id="header_album">
-       <img src="http://owgdgxfqs.bkt.clouddn.com/photo_01.png?attname=&e=1505703638&token=Mwm9f_4JvNJZfeCpGK3STTF1zUTZbsXonDHIq_8j:Dcg2f6JiXqMTrd9E6XZCDBwlA2I"  />
-       <img src="http://owgdgxfqs.bkt.clouddn.com/photo_02.png?attname=&e=1505703638&token=Mwm9f_4JvNJZfeCpGK3STTF1zUTZbsXonDHIq_8j:M93eaeWgx2WHoTU_sFCGmsMfbd8"  />
-       <img src="http://owgdgxfqs.bkt.clouddn.com/photo_03.png?attname=&e=1505703638&token=Mwm9f_4JvNJZfeCpGK3STTF1zUTZbsXonDHIq_8j:Pky_0UuBN-ovw7NeeANF3eDwwto"  />
-       <img src="http://owgdgxfqs.bkt.clouddn.com/photo_04.png?attname=&e=1505703638&token=Mwm9f_4JvNJZfeCpGK3STTF1zUTZbsXonDHIq_8j:uDA7C8qXehTH1qv6k5J2SUTY7B8"  />
+       <img src="{% static 'photo_01.png' %}"  />
+       <img src="{% static 'photo_02.png' %}"  />
+       <img src="{% static 'photo_03.png' %}"  />
+       <img src="{% static 'photo_04.png' %}"  />
       </ul>
     </div>
             <a  title='{{site.title}}' class="logo" href="{{site.index}}"></a>
